--- a/services/booking-service.yaml
+++ b/services/booking-service.yaml
@@ -237,7 +237,7 @@ paths:
   /bookings/draft:
     get:
       summary: Get draft booking for listing
-      description: Retrieve an existing draft booking for the authenticated user and specified listing. Returns the most recent draft booking if one exists, or 404 if none found.
+      description: Retrieve an existing draft booking for the authenticated user and specified listing. Returns the most recent draft booking if one exists. If no draft exists, returns a successful response with null data.
       tags: [booking]
       operationId: bookingsGetDraft
       security: [{ jwtAuth: [] }]
@@ -249,17 +249,11 @@ paths:
           description: Listing ID to check for draft booking
       responses:
         "200":
-          description: Draft booking found
+          description: Draft booking found or no draft exists (data may be null)
           content:
             application/json:
               schema:
                 $ref: "#/components/schemas/ApiResponseBooking"
-        "404":
-          description: No draft booking found
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/ErrorResponse"
         "400":
           description: Bad Request
           content:
@@ -722,7 +716,11 @@ components:
       type: object
       properties:
         success: { type: boolean, example: true }
-        data: { $ref: "#/components/schemas/Booking" }
+        data:
+          type: object
+          allOf:
+            - $ref: "#/components/schemas/Booking"
+          nullable: true
         toast: { type: string, example: "Booking processed successfully." }
         error: { type: string, example: "" }
       required: [success, data]
