feat(api): add listing availability calendar endpoint with detailed responses

--- a/gateway/app.yaml
+++ b/gateway/app.yaml
@@ -7877,6 +7877,74 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/ErrorResponse'
+  /listings/{id}/availability/calendar:
+    get:
+      summary: Get listing availability calendar
+      description: >-
+        Returns a list of unavailable dates for a listing within a specified
+        date range. Used to disable unavailable dates in date pickers.
+      tags:
+        - listing
+      operationId: listingsGetAvailabilityCalendar
+      x-google-backend:
+        address: https://listing-service-981292602655.us-central1.run.app
+        path_translation: APPEND_PATH_TO_ADDRESS
+      security:
+        - jwtAuth: []
+      parameters:
+        - name: id
+          in: path
+          required: true
+          schema:
+            type: string
+          description: Listing ID
+        - name: start_date
+          in: query
+          required: false
+          schema:
+            type: string
+            format: date
+          description: Start date for availability check (defaults to today)
+        - name: days
+          in: query
+          required: false
+          schema:
+            type: integer
+            default: 60
+            minimum: 1
+            maximum: 365
+          description: Number of days to check availability (default 60, max 365)
+      responses:
+        '200':
+          description: Availability calendar retrieved successfully
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ApiResponseAvailabilityCalendar'
+        '400':
+          description: Bad Request
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
+        '401':
+          description: Unauthorized (missing or invalid token)
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
+        '404':
+          description: Listing not found
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
+        default:
+          description: Default error response
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
   /listings/dashboard/{section}:
     get:
       summary: Get dashboard section data
@@ -8961,59 +9029,6 @@ paths:
                 $ref: '#/components/schemas/ErrorResponse'
         '404':
           description: Booking not found
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/ErrorResponse'
-      x-google-backend: *ref_0
-  /listings/{id}/availability/calendar:
-    get:
-      summary: Get listing availability calendar
-      description: >-
-        Returns a list of unavailable dates for a listing within a specified
-        date range. Used to disable unavailable dates in date pickers.
-      tags:
-        - booking
-      operationId: listingsGetAvailabilityCalendar
-      security: []
-      parameters:
-        - name: id
-          in: path
-          required: true
-          schema:
-            type: string
-          description: Listing ID
-        - name: start_date
-          in: query
-          required: false
-          schema:
-            type: string
-            format: date
-          description: Start date for availability check (defaults to today)
-        - name: days
-          in: query
-          required: false
-          schema:
-            type: integer
-            default: 60
-            minimum: 1
-            maximum: 365
-          description: Number of days to check availability (default 60, max 365)
-      responses:
-        '200':
-          description: Availability calendar retrieved successfully
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/ApiResponseAvailabilityCalendar'
-        '400':
-          description: Bad Request
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/ErrorResponse'
-        default:
-          description: Default error response
           content:
             application/json:
               schema:
@@ -14068,6 +14083,60 @@ components:
         - latitude
         - longitude
         - accuracy
+    ApiResponseAvailabilityCalendar:
+      type: object
+      description: Standard API response for listing availability calendar.
+      properties:
+        success:
+          type: boolean
+          description: Indicates if the request was successful.
+          example: true
+        data:
+          $ref: '#/components/schemas/AvailabilityCalendar'
+        error:
+          type: string
+          description: Error message if request failed.
+          example: ''
+        toast:
+          type: string
+          description: Optional toast message for the client UI.
+          example: ''
+      required:
+        - success
+        - data
+    AvailabilityCalendar:
+      type: object
+      description: Listing availability calendar data.
+      properties:
+        listing_id:
+          type: string
+          description: Listing ID
+          example: listing123
+        start_date:
+          type: string
+          format: date
+          description: Start date of the availability check
+          example: '2024-01-01'
+        end_date:
+          type: string
+          format: date
+          description: End date of the availability check
+          example: '2024-03-01'
+        unavailable_dates:
+          type: array
+          items:
+            type: string
+            format: date
+          description: List of unavailable dates (YYYY-MM-DD format)
+          example:
+            - '2024-01-15'
+            - '2024-01-16'
+            - '2024-02-10'
+      required:
+        - listing_id
+        - start_date
+        - end_date
+        - unavailable_dates
     ApiResponseBookings:
       type: object
       description: Standard API response for multiple bookings.
@@ -14436,60 +14505,6 @@ components:
         - check_in
         - check_out
         - guests
-    ApiResponseAvailabilityCalendar:
-      type: object
-      description: Standard API response for listing availability calendar.
-      properties:
-        success:
-          type: boolean
-          description: Indicates if the request was successful.
-          example: true
-        data:
-          $ref: '#/components/schemas/AvailabilityCalendar'
-        error:
-          type: string
-          description: Error message if request failed.
-          example: ''
-        toast:
-          type: string
-          description: Optional toast message for the client UI.
-          example: ''
-      required:
-        - success
-        - data
-    AvailabilityCalendar:
-      type: object
-      description: Listing availability calendar data.
-      properties:
-        listing_id:
-          type: string
-          description: Listing ID
-          example: listing123
-        start_date:
-          type: string
-          format: date
-          description: Start date of the availability check
-          example: '2024-01-01'
-        end_date:
-          type: string
-          format: date
-          description: End date of the availability check
-          example: '2024-03-01'
-        unavailable_dates:
-          type: array
-          items:
-            type: string
-            format: date
-          description: List of unavailable dates (YYYY-MM-DD format)
-          example:
-            - '2024-01-15'
-            - '2024-01-16'
-            - '2024-02-10'
-      required:
-        - listing_id
-        - start_date
-        - end_date
-        - unavailable_dates
     InitiateBookingRequest:
       type: object
       description: >-
