feat(api): add reviews_total field to listing and host schemas in API specifications

--- a/gateway/app.yaml
+++ b/gateway/app.yaml
@@ -6276,6 +6276,10 @@ paths:
                           format: uri
                       host:
                         type: object
+                      reviews_total:
+                        type: integer
+                        description: Combined total of listing and host (user) reviews returned by the listing endpoint.
+                        example: 6
                       house_rules:
                         type: array
                         items:
