--- a/services/listing-service.yaml
+++ b/services/listing-service.yaml
@@ -1862,6 +1862,10 @@ paths:
                           format: uri
                       host:
                         type: object
+                      reviews_total:
+                        type: integer
+                        description: Combined total of listing and host (user) reviews returned by the listing endpoint.
+                        example: 6
                       house_rules:
                         type: array
                         items:
